Update index.html file

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chat with PDF using Gemini AI</title>
+    <title>Chat with PDF using Chatify AI</title>
 
     <style>
         body {
@@ -149,7 +149,7 @@
             <h3><b>How It Works::</b></h3>
             <li class="myq-container">Simply upload one or more PDF files through the application. The AI will process the content and prepare it for interaction.</li>
             <li class="myq-container"> After uploading your PDF, type any question related to the document's content into the text box. For example, “What are the main points of this document?”</li>
-            <li class="myq-container">The AI, powered by Gemini, will analyze the document and respond to your question by providing the most relevant information from the uploaded PDF.</li>
+            <li class="myq-container">The AI, powered by Chatify, will analyze the document and respond to your question by providing the most relevant information from the uploaded PDF.</li>
 
         </div>
     
